[package]
name = "bark_token"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bark_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "=0.8.6"
solana-sdk = "1.18.1"
solana-token = "3.0.0"
solana/spl-token: "0.4.0"
solana-program = "1.16.27"
anchor-lang = "0.29.0"
sha2-const = "0.1.2"

spl-transfer-hook-interface = { version = "0.3" }
spl-tlv-account-resolution = { version = "0.4" }
spl-pod = "0.1.0"